--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,7 +13,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
   
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
   # Installs Node and the npm packages saved in your package.json file in the build
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.4.1
@@ -36,7 +36,7 @@ jobs:
    
   # In order to leverage the artifact in another job, we need to upload it with the upload action 
       - name: upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ExportedArmTemplate # (4) use the same artifact name you used in the previous export step
           path: ${{github.workspace}}/ADFroot/build/ExportedArmTemplate
@@ -62,13 +62,13 @@ jobs:
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
             enable-AzPSSession: true 
 
-        - name: data-factory-deploy
-          uses: Azure/data-factory-deploy-action@v1.2.0
-          with:
-            resourceGroupName: # (6) your target ADF resource group name
-            dataFactoryName: # (7) your target ADF name
-            armTemplateFile: # (8) ARM template file name ARMTemplateForFactory.json
-            armTemplateParametersFile: # (9) ARM template parameters file name ARMTemplateParametersForFactory.json
-            additionalParameters: # (10) Parameters which will be replaced in the ARM template. Expected format 'key1=value key2=value keyN=value'. At the minimum here you should provide the target ADF name parameter. Check the ARMTemplateParametersForFactory.json file for all the parameters that are expected in your scenario
+        # - name: data-factory-deploy
+        #   uses: Azure/data-factory-deploy-action@v1.2.0
+        #   with:
+        #     resourceGroupName: # (6) your target ADF resource group name
+        #     dataFactoryName: # (7) your target ADF name
+        #     armTemplateFile: # (8) ARM template file name ARMTemplateForFactory.json
+        #     armTemplateParametersFile: # (9) ARM template parameters file name ARMTemplateParametersForFactory.json
+        #     additionalParameters: # (10) Parameters which will be replaced in the ARM template. Expected format 'key1=value key2=value keyN=value'. At the minimum here you should provide the target ADF name parameter. Check the ARMTemplateParametersForFactory.json file for all the parameters that are expected in your scenario
             
             # skipAzModuleInstallation:  # Parameters which skip the Az module installation. Optional, default is false.​
