--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -69,6 +69,5 @@ jobs:
             dataFactoryName: adf-cicd-prod-dmd # (7) your target ADF name
             armTemplateFile: ARMTemplateForFactory.json # (8) ARM template file name ARMTemplateForFactory.json
             armTemplateParametersFile: ARMTemplateParametersForFactory.json # (9) ARM template parameters file name ARMTemplateParametersForFactory.json
-    #     additionalParameters: # (10) Parameters which will be replaced in the ARM template. Expected format 'key1=value key2=value keyN=value'. At the minimum here you should provide the target ADF name parameter. Check the ARMTemplateParametersForFactory.json file for all the parameters that are expected in your scenario
-        
-        # skipAzModuleInstallation:  # Parameters which skip the Az module installation. Optional, default is false.​
+            additionalParameters: blobstorage_properties_typeProperties_serviceEndpoint=https://adfcicdproddmd.blob.core.windows.net/ # (10) Parameters which will be replaced in the ARM template. Expected format 'key1=value key2=value keyN=value'. At the minimum here you should provide the target ADF name parameter. Check the ARMTemplateParametersForFactory.json file for all the parameters that are expected in your scenario
+          # skipAzModuleInstallation:  # Parameters which skip the Az module installation. Optional, default is false.​
