--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,6 +45,8 @@ jobs:
     release:
         needs: build
         runs-on: ubuntu-latest
+        environment: 
+            name: prod 
         steps:
         
         - uses: actions/checkout@v4
