--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,8 +45,7 @@ jobs:
     release:
         needs: build
         runs-on: ubuntu-latest
-        environment: 
-            name: prod 
+        environment: prod 
         steps:
         
         - uses: actions/checkout@v4
